--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,14 @@
+
+[build]
+command = """
+  git clone https://github.com/flutter/flutter.git --depth 1 -b stable
+  export PATH="$PATH:`pwd`/flutter/bin"
+  flutter doctor
+  flutter pub get
+  flutter build web
+  """
+publish = "build/web"
+
 [[redirects]]
 from = "/*"
 to = "/index.html"
