--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dev_dependencies:
   flutter_local_notifications: ^17.0.0
   url_launcher: ^6.2.5
   flutter_launcher_icons: ^0.13.1
+  firebase_storage: ^13.0.6
+  image_picker: ^1.1.2
+  file_picker: ^10.3.10
 
 flutter_icons:
   android: true
